# Elaborato_2022

./: .gitignore  AI.cpp  AI.h  Achievement.cpp  Achievement.h  AchievementManager.cpp  AchievementManager.h  AchievementState.cpp  AchievementState.h  AchievementType.cpp  AchievementType.h  Ammunition.cpp  Ammunition.h  Animation.cpp  Animation.h  Archer.cpp  Archer.h  ArenaMap.cpp  ArenaMap.h  Armor.cpp  Armor.h  Arrow.cpp  Arrow.h  AssaultRifle.cpp  AssaultRifle.h  AssaultRifleBullet.cpp  AssaultRifleBullet.h  AudioManager.cpp  AudioManager.h  Bonus.cpp  Bonus.h  Boss.cpp  Boss.h  Bow.cpp  Bow.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Coin.cpp  Coin.h  (+62 more)
res/achievements/: achievements.txt
res/maps/: desertMap.txt  desertMap.xml
test/: AchievementFixture.cpp  AchievementFixture.h  AchivementTest.cpp  ArenaMapFixture.cpp  ArenaMapFixture.h  ArenaMapTest.cpp  CMakeLists.txt  GameCharacterFixture.cpp  GameCharacterFixture.h  GameCharacterTest.cpp  MenuFixture.cpp  MenuFixture.h  MenuTest.cpp  SpawnerFixture.cpp  SpawnerFixture.h  SpawnerTest.cpp  StateFixture.cpp  StateFixture.h  StateTest.cpp
test/lib/googletest/: CMakeLists.txt
test/lib/googletest/cmake/: internal_utils.cmake
test/lib/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md
test/lib/googletest/include/gtest/: gtest-death-test.h  gtest-message.h  gtest-printers.h  gtest.h
test/lib/googletest/include/gtest/internal/: gtest-internal.h  gtest-param-util.h  gtest-port.h
test/lib/googletest/src/: gtest-death-test.cc  gtest-filepath.cc  gtest-internal-inl.h  gtest-port.cc  gtest-printers.cc  gtest.cc
test/lib/googletest/test/: gtest-port_test.cc
